mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  ports:
  - port: 31001
   # nodePort: 31001
    targetPort: mysql-port
    protocol: TCP
  selector:
    app: mysql
  #type: LoadBalancer
