wordpress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
spec:
  ports:
  - port: 31002
   # nodePort: 31001
    targetPort: http-port-port
    protocol: TCP
  selector:
    app: wordpress
  #type: LoadBalancer
