ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: wordpress
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
  - host: wordpress.example.com
    http:
      paths:
      - path: "/"
        backend:
          serviceName: wordpress
          servicePort: 8000
