wordpress-ingress-istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: wordpress
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: wordpress
spec:
  hosts:
  - "*"
  gateways:
  - wordpress
  http:  
  - route:
    - destination:
        host: wordpress
        port:
          number: 31001
